tests/neg/i11994.check
-- [E046] Cyclic Error: tests/neg/i11994.scala:3:18 --------------------------------------------------------------------
3 |given [T <: Tuple.meow]: Unit = ??? // error
  |                  ^
  |                  Cyclic reference involving method given_Unit
  |
  |                  The error occurred while trying to compute the signature of given instance given_Unit
  |                    which required to compute the signature of type T
  |                    which required to compute the signature of given instance given_Unit
  |
  |                   Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
  |
  | longer explanation available when compiling with `-explain`
